stl-test/Tests/coordinate/bounds/Negative/test11.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord{55, 66}
    auto it = cord + {1111111111111, 1111111111111111111};
}
